Update contact information

--- a/contact.html
+++ b/contact.html
@@ -354,7 +354,7 @@
                     <div class="contact-method-icon">📧</div>
                     <h4 class="contact-method-title">Email Us</h4>
                     <p class="contact-method-info">
-                        <a href="mailto:support@outscore.in">support@outscore.in</a>
+                        <a href="mailto:info@nlightn.in">info@nlightn.in</a>
                         <br>We respond within 24 hours
                     </p>
                 </div>
@@ -362,7 +362,7 @@
                     <div class="contact-method-icon">📞</div>
                     <h4 class="contact-method-title">Call Us</h4>
                     <p class="contact-method-info">
-                        <a href="tel:+919876543210">+91 98765 43210</a>
+                        <a href="tel:+919731296263">+91 97312 96263</a>
                         <br>Mon-Sat, 9 AM - 7 PM
                     </p>
                 </div>
@@ -370,7 +370,7 @@
                     <div class="contact-method-icon">💬</div>
                     <h4 class="contact-method-title">WhatsApp</h4>
                     <p class="contact-method-info">
-                        <a href="https://wa.me/919876543210" target="_blank">+91 98765 43210</a>
+                        <a href="https://wa.me/919731296263" target="_blank">+91 97312 96263</a>
                         <br>Quick responses guaranteed
                     </p>
                 </div>
@@ -394,15 +394,13 @@
                     <div class="company-info-item">
                         <p class="company-info-label">Email Address</p>
                         <p class="company-info-value">
-                            <!-- UPDATE: Add your email here -->
-                            <a href="mailto:support@outscore.in">support@outscore.in</a>
+                            <a href="mailto:info@nlightn.in">info@nlightn.in</a>
                         </p>
                     </div>
                     <div class="company-info-item">
                         <p class="company-info-label">Phone Number</p>
                         <p class="company-info-value">
-                            <!-- UPDATE: Add your phone number here -->
-                            <a href="tel:+919876543210">+91 98765 43210</a>
+                            <a href="tel:+919731296263">+91 97312 96263</a>
                         </p>
                     </div>
                 </div>
@@ -468,7 +466,7 @@
             // window.open('https://wa.me/919876543210?text=Hi, I have a question about Outscore courses', '_blank');
             
             // Option 3: Show an alert (placeholder - replace with actual chatbot)
-            alert('Chatbot integration pending. Please update the openChatbot() function with your chatbot provider\'s code.\n\nFor now, you can reach us at:\nEmail: support@outscore.in\nPhone: +91 98765 43210');
+            alert('Chatbot integration pending. Please update the openChatbot() function with your chatbot provider\'s code.\n\nFor now, you can reach us at:\nEmail: info@nlightn.in\nPhone: +91 97312 96263');
         }
     </script>
 </body>
