--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
                         <span class="gradient-text">AI-Powered Personalized Learning</span>
                     </h1>
                     <p class="hero-subtitle">
-                        Built by education experts with decades of experience. Our AI powered Instructional design focuses on learning and not just testing. It 
-                        identifies knowledge gaps and creates a customized study plan that delivers real results.
+                        Built by education experts with decades of experience. Our AI powered Instructional design focuses on learning and not just testing.
                     </p>
                     <div class="hero-stats">
                         <div class="stat-item">
@@ -58,7 +57,7 @@
                         </div>
                         <div class="stat-item">
                             <div class="stat-number">1000+</div>
-                            <div class="stat-label">Active Students</div>
+                            <div class="stat-label">Trusted Students</div>
                         </div>
                     </div>
                     <div class="hero-actions">
